--- a/src/pages/workshops.mdx
+++ b/src/pages/workshops.mdx
@@ -3,12 +3,14 @@ import Layout from "../components/layout";
 import Card from "../components/Card"; 
 import { Flex } from "@rebass/grid"; 
 import Speaker from "../components/Speaker"; 
+import Workshop from "../components/Workshop";
 import michealImage from "../components/SpeakerImages/michaelperry";
 import ryanImage from "../components/SpeakerImages/ryan";
 import scottsanImage from "../components/SpeakerImages/scottsan";
 import felesiaImage from "../components/SpeakerImages/felesia";
 import vueVixensImage from "../components/SpeakerImages/vuevixens";
 import { Link as ButtonLink } from "../components/Button";
+import Text from "../components/Text";
 import { Hidden } from '../components/Hidden';
 
 
@@ -17,11 +19,9 @@ import { Hidden } from '../components/Hidden';
 
 ## Workshops 
 
-
+<Text my={10}>
 Will be conducted on Aug-01-2019 at Improving Office,One Easton Oval Suite. 175, Columbus, OH 43219 from 8 AM to 4 PM.
-Vue Vixens workshop will be conducted at Leading EDJE, 5555 Perimeter Dr, Dublin, OH 43017 from 9.45 AM to 4 PM.
-
-
+</Text>
 </Card>
 <Flex flexDirection="row" flexWrap="wrap" alignItems="center" justifyContent="center" style={{ padding: "2rem", width: "" }}>
 <ButtonLink
@@ -68,16 +68,24 @@ company="Black Mutt Media, LLC"
 bio="Owner at Black Mutt Media, LLC. Scott Sanzenbacher is a web and mobile application developer using many languages and frameworks. His current focus is React and React Native with a Node.js API."
  /> 
 
-<Speaker name="Vue Vixens" Image={vueVixensImage} talk={{ title: "Vue Vixens Full Day Free Workshop", 
-description: "Are you curious about VueJS? Do you identify as a woman? Join us, the day before JavaScript and Friends Conference 2019, for a full day workshop. You will learn when and how to use VueJS, and you will create a fun, working app of your own! We will provide lunch, and mentors to help you get up and running. Workshop will be mentored by Novella Chiechi and Diana Rodriguez. Workshop will be conducted at Leading EDJE 5555 Perimeter Dr, Dublin, OH 43017 from 9.45 AM to 4 PM.Check out the Events page to register for Vue Vixens workshop" }} 
+<Workshop name="Vue Vixens" Image={vueVixensImage} talk={{ title: "Vue Vixens Full Day Free Workshop", 
+description: "Are you curious about VueJS? Do you identify as a woman? Join us, the day before JavaScript and Friends Conference 2019, for a full day workshop. You will learn when and how to use VueJS, and you will create a fun, working app of your own! We will provide lunch, and mentors to help you get up and running. Workshop will be mentored by Novella Chiechi and Diana Rodriguez. Workshop will be conducted at Leading EDJE." }} 
 twitter="VueVixens" 
 linkedin="vuevixens" 
 company="Vue Vixens" 
 bio="Vue Vixens is an initiative founded by Jen Looper, Developer Advocate at Progress, that creates and hosts workshops to teach Vue.js to under-represented people in a cool and fun way. It is based on the successful model pioneered by Shmuela Jacobs for the Angular community (ng-girls.org) who was in turn inspired by the Rails Bridge and Django Girls initiatives. The format involves self-driven code labs completed in a workshop format in groups with mentoring by conference-goers and speakers who volunteer to help. The goal of the program is to familiarize women and those who identify as such with Vue.js in a supportive and inclusive environment"
- /> 
+registerlink ="https://vuevixens.org/events/javascript-friends-conference-2019" /> 
 
 </Flex>
+<Card>
+<Text my={10}>
+Vue Vixens workshop will be conducted at Leading EDJE, 5555 Perimeter Dr, Dublin, OH 43017 from 9.45 AM to 4 PM.
+</Text>
+
 ###### Speakers subject to change.
+
+</Card>
+
 
 
 
