--- a/src/pages/workshops.mdx
+++ b/src/pages/workshops.mdx
@@ -9,6 +9,7 @@ import ryanImage from "../components/SpeakerImages/ryan";
 import scottsanImage from "../components/SpeakerImages/scottsan";
 import felesiaImage from "../components/SpeakerImages/felesia";
 import vueVixensImage from "../components/SpeakerImages/vuevixens";
+import shawnImage from "../components/SpeakerImages/shawn";
 import { Link as ButtonLink } from "../components/Button";
 import Text from "../components/Text";
 import { Hidden } from '../components/Hidden';
@@ -20,7 +21,7 @@ import { Hidden } from '../components/Hidden';
 ## Workshops 
 
 <Text my={10}>
-Will be conducted on Aug-01-2019 at Improving Office,One Easton Oval Suite. 175, Columbus, OH 43219 from 8 AM to 4 PM.
+Will be conducted on Aug-01-2019 at Improving Office,One Easton Oval Suite. 175, Columbus, OH 43219 from 8 AM to 5 PM.
 </Text>
 </Card>
 <Flex flexDirection="row" flexWrap="wrap" alignItems="center" justifyContent="center" style={{ padding: "2rem", width: "" }}>
@@ -35,46 +36,66 @@ Will be conducted on Aug-01-2019 at Improving Office,One Easton Oval Suite. 175,
 </Flex>
 <Flex flexDirection="row" flexWrap="wrap" alignItems="center" justifyContent="center" style={{ padding: "2rem", width: "" }}>
 
-<Speaker name="Felesia McDonald" Image={felesiaImage} talk={{ title: "UX Workshop for Developers", 
-description: "Did you know that UX Design is not just about the look and feel of an application? There is real data that drives design decisions. During the 4 hour UX workshop, I will introduce you to UX Design and how it applies to developers. You will become familiar with basic UX Design terminology, best practices (including accessibility) and how UX fits into an Agile environment. The workshop will also include a hands-on group design activity that will include user testing. The workshop is designed to teach developers an understanding of UX best practices and how to collaborate with designers. The goal at the end of the workshop is for you to have a better understanding of the UX process any why UX and develop collaboration is essential to application development."}} 
-twitter="felesiadenon" 
-linkedin="felesiajackson" 
-company="OEConnection" 
-bio="I am a full-time UX Designer at OEC in Richfield, Ohio with over 10 years of experience. I received my MS degree from Kent State in UX Design where I am also an Adjunct Instructor. I was a speaker at World IA Day at Kent and also a UX workshop facilitator sponsored by Kent State. I believe that through collaboration with UX Design developers and build applications that are both functional and user friendly."
- /> 
-
-<Speaker name="Michael L Perry" Image={michealImage} talk={{ title: "Your First PWA", 
+<Workshop name="Michael L Perry" Image={michealImage} talk={{ title: "Your First PWA", 
 description: "Progressive Web Apps bridge the gap between web sites and mobile applications. They are easy to install from any browser, work offline, and provide a faster, more native experience. Unfortunately, the patterns and APIs needed to build them are quite low level and difficult to get right. Thankfully, we have tools to make that job easier. Using Node, Webpack, TypeScript, React, and Jinaga, you can have your first PWA up and running in an afternoon. And what a fun afternoon it will be! Open up your Windows or Mac laptop and fire up your favorite Linux terminal. Use Node to bring in Webpack and TypeScript. Pop open your text editor of choice (Visual Studio Code strongly recommended) and start slinging some React and Jinaga code. Together, we will build a conference app that any show would be proud to show off. Design a data model that can be stored on the device and in the could, Present that data on a gloriously responsive interface, Cache sessions offline to cope with bad conference WiFi, Receive updates and notifications from conference organizers, Collaborate with other attendees through social media integration. Not every web site should be a Progressive Web App. But some of them should. Learn the skills to build them better."}} 
 twitter="michaellperry" 
-linkedin="michaellperry" 
+linkedin="in/michaellperry" 
 company="Improving Enterprises" 
 bio="Software is math. Every class is a theorem. The compiler is the proof. And unit tests check our work. Michael has recorded Pluralsight courses on CQRS, XAML Patterns, and Cryptography, in addition to Provable Code. He maintains the spoon-bending Assisticant, Correspondence, and Jinaga open-source libraries. He shared videos about distributed systems at historicalmodeling.com. And he helps his clients at Improving benefit from the power of software mathematics."
+registerlink="https://www.eventbrite.com/e/javascript-and-friends-conference-registration-60880128102"
+timing="8:15 AM to 12:15 PM"
+/> 
+
+<Workshop name="Shawn McCarthy" Image={shawnImage} talk={{ title: "Building a Restful API with Node & MongoDB", 
+description: "Every application stores data, MongoDB as a document based Binary JSON datastore is a great solution for creating and accessing data in JavaScript. Using MongoDB Atlas, Express & NodeJS we will create a simple RESTful API to create and access data through our API. During the workshop we will discuss data modeling as well as indexing and data access using CRUD and aggregation methods.  We will also explore MongoDB serverless platform known as Stitch."}} 
+twitter="sbmccarth" 
+linkedin="in/shawnbmccarthy" 
+company="MongoDB" 
+bio="Developer Advocate at MongoDB, with 20 years experience working with enterprise software across various environments."
+registerlink="https://www.eventbrite.com/e/javascript-and-friends-conference-registration-60880128102"
+timing="8:15 AM to 12:15 PM"
+/> 
+
+
+<Workshop name="Felesia McDonald" Image={felesiaImage} talk={{ title: "UX Workshop for Developers", 
+description: "Did you know that UX Design is not just about the look and feel of an application? There is real data that drives design decisions. During the 4 hour UX workshop, I will introduce you to UX Design and how it applies to developers. You will become familiar with basic UX Design terminology, best practices (including accessibility) and how UX fits into an Agile environment. The workshop will also include a hands-on group design activity that will include user testing. The workshop is designed to teach developers an understanding of UX best practices and how to collaborate with designers. The goal at the end of the workshop is for you to have a better understanding of the UX process any why UX and develop collaboration is essential to application development."}} 
+twitter="felesiadenon" 
+linkedin="in/felesiajackson" 
+company="OEConnection" 
+bio="I am a full-time UX Designer at OEC in Richfield, Ohio with over 10 years of experience. I received my MS degree from Kent State in UX Design where I am also an Adjunct Instructor. I was a speaker at World IA Day at Kent and also a UX workshop facilitator sponsored by Kent State. I believe that through collaboration with UX Design developers and build applications that are both functional and user friendly."
+registerlink="https://www.eventbrite.com/e/javascript-and-friends-conference-registration-60880128102"
+ timing="1:00 PM to 5:00 PM"
  /> 
 
-<Speaker name="Ryan Lanciaux" Image={ryanImage} talk={{ title: "Intro to React and Best Practices Workshop ", 
+<Workshop name="Ryan Lanciaux" Image={ryanImage} talk={{ title: "Intro to React and Best Practices Workshop ", 
 description: "React is no longer in its infancy as a framework and its popularity is continuing to grow.  While many modern JavaScript frameworks employ a component based structure, React can be a paradigm shift for those unfamiliar with the technology. In this workshop, we will explore some of the introductory concepts to React using React Hooks. We will discuss concepts like how do I start building an application?, how do I structure my components? and how do I get the most reuse from my components without a ton of overhead? At the end of this workshop you will be on the path to building your own web applications with React.  We will cover some of the practices we have employed building production applications with React over the past 5 years." }} 
 twitter="ryanlanciaux" 
-linkedin="lanciaux" 
+linkedin="in/lanciaux" 
 company="Spaceship Studio LLC" 
 bio="Founding Member at Spaceship Studio LLC. Ryan specializes in fast and dynamic web and native mobile applications development.His specialities include JavaScript, React, Node.js, Ruby, Rails, C#, Web, CSS, Linux.He lives in Ann Arbor with his wonderful family! In his freetime, he creates electronic music"
+registerlink="https://www.eventbrite.com/e/javascript-and-friends-conference-registration-60880128102"
+timing="1:00 PM to 5:00 PM"
  /> 
 
-
-<Speaker name="Scott Sanzenbacher" Image={scottsanImage} talk={{ title: "Intro to React and Best Practices Workshop ", 
+<Workshop name="Scott Sanzenbacher" Image={scottsanImage} talk={{ title: "Intro to React and Best Practices Workshop ", 
 description: "React is no longer in its infancy as a framework and its popularity is continuing to grow.  While many modern JavaScript frameworks employ a component based structure, React can be a paradigm shift for those unfamiliar with the technology. In this workshop, we will explore some of the introductory concepts to React using React Hooks. We will discuss concepts like how do I start building an application?, how do I structure my components? and how do I get the most reuse from my components without a ton of overhead? At the end of this workshop you will be on the path to building your own web applications with React.  We will cover some of the practices we have employed building production applications with React over the past 5 years." }} 
 twitter="scottsanz" 
-linkedin="scottsanzenbacher" 
+linkedin="in/scottsanzenbacher" 
 company="Black Mutt Media, LLC" 
 bio="Owner at Black Mutt Media, LLC. Scott Sanzenbacher is a web and mobile application developer using many languages and frameworks. His current focus is React and React Native with a Node.js API."
- /> 
+registerlink="https://www.eventbrite.com/e/javascript-and-friends-conference-registration-60880128102"
+timing="1:00 PM to 5:00 PM"
+/> 
 
 <Workshop name="Vue Vixens" Image={vueVixensImage} talk={{ title: "Vue Vixens Full Day Free Workshop", 
 description: "Are you curious about VueJS? Do you identify as a woman? Join us, the day before JavaScript and Friends Conference 2019, for a full day workshop. You will learn when and how to use VueJS, and you will create a fun, working app of your own! We will provide lunch, and mentors to help you get up and running. Workshop will be mentored by Novella Chiechi and Diana Rodriguez. Workshop will be conducted at Leading EDJE." }} 
 twitter="VueVixens" 
-linkedin="vuevixens" 
+linkedin="company/vuevixens" 
 company="Vue Vixens" 
 bio="Vue Vixens is an initiative founded by Jen Looper, Developer Advocate at Progress, that creates and hosts workshops to teach Vue.js to under-represented people in a cool and fun way. It is based on the successful model pioneered by Shmuela Jacobs for the Angular community (ng-girls.org) who was in turn inspired by the Rails Bridge and Django Girls initiatives. The format involves self-driven code labs completed in a workshop format in groups with mentoring by conference-goers and speakers who volunteer to help. The goal of the program is to familiarize women and those who identify as such with Vue.js in a supportive and inclusive environment"
-registerlink ="https://vuevixens.org/events/javascript-friends-conference-2019" /> 
+registerlink ="https://vuevixens.org/events/javascript-friends-conference-2019"
+timing="9.45 AM to 4.00 PM"
+ /> 
 
 </Flex>
 <Card>
