Update Angular Meetup
Updated links for Angular Meetup

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -11,7 +11,7 @@ Click on the links to RSVP for our July Events
 
 <Text my={20}>07.09.2019 <a href="https://www.eventbrite.com/e/intro-to-rxjs-and-firebase-tickets-64553341783" target="_blank" rel="noopener noreferrer">Intro to RxJs and Firebase</a></Text>
 
-<Text my={20}>07.18.2019 <a href="" target="_blank" rel="noopener noreferrer">Details to be Updated</a></Text>
+<Text my={20}>07.18.2019 <a href="https://www.eventbrite.com/e/intro-to-angular-8-and-features-tickets-65178688211" target="_blank" rel="noopener noreferrer">Explore Features of Angular8</a></Text>
 
 <Text my={20}>07.24.2019 <a href="https://www.meetup.com/Vue-Columbus/events/jgbfwqyzkbgc/" target="_blank" rel="noopener noreferrer">Vue - Wired for success</a></Text>
 
