Guy speaker details updated
Guy company name updated.

--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -159,8 +159,8 @@ bio="Christine ('Tine) Zekis is an educator-turned-developer working as a Softwa
 description: "Want to write a web application? Better get familiar with JavaScript.JavaScript has long been the king of front-end. While there have been various attempts to dethrone it, they have typically involved treating JavaScript as an assembly-language analog that you transpile your code to. This has lead to complex build pipelines that result in JavaScript which the browser has to parse and *you* still have to debug. But what if there were an actual byte-code language you could compile your non-JavaScript code to instead? That is what WebAssembly is. I am going to explain how WebAssembly works and how to use it in this talk. I will cover what it is, how it fits into your application, and how to build and use your own WebAssembly modules. And, I will demo how to build and use those modules with both Rust and the WebAssembly Text Format. That is right, I will be live coding in an assembly language. I will also go over some online resources for other languages and tools that make use of WebAssembly. When we are done, you will have the footing you need to start building applications featuring WebAssembly. So grab a non-JavaScript language, a modern browser, and let us get started!" }} 
 twitter="guyroyse" 
 linkedin="groyse" 
-company="" 
-bio="Guy works in Columbus, Ohio. Combining his decades of experience in writing software with a passion for sharing what he has learned, Guy goes out into developer communities and helps others build great software. Teaching and community have long been a focus for Guy. He is President of the Columbus JavaScript Users Group, an organizer for the Columbus Machine Learners, and has even has helped teach programming at a prison in central Ohio. In past lives, Guy has worked as a consultant in a broad range of industries including healthcare, retail, and utilities. He also has spent several years working for a major insurance company in central Ohio. This has given him a broad view of technology application toward business problems. In his personal life, Guy is a hard-boiled geek interested in role-playing games, science fiction, and technology. He also has a slightly less geeky interest in history and linguistics. In his spare time, he volunteers for his local Cub Scout Pack, goes camping, and studies history and linguistics. Guy lives in Ohio with his wife, his three teenage sons, and an entire wall of games."
+company="ScriptDrop" 
+bio="Guy works for ScriptDrop in Columbus, Ohio. Combining his decades of experience in writing software with a passion for sharing what he has learned, Guy goes out into developer communities and helps others build great software. Teaching and community have long been a focus for Guy. He is President of the Columbus JavaScript Users Group, an organizer for the Columbus Machine Learners, and has even has helped teach programming at a prison in central Ohio. In past lives, Guy has worked as a consultant in a broad range of industries including healthcare, retail, and utilities. He also has spent several years working for a major insurance company in central Ohio. This has given him a broad view of technology application toward business problems. In his personal life, Guy is a hard-boiled geek interested in role-playing games, science fiction, and technology. He also has a slightly less geeky interest in history and linguistics. In his spare time, he volunteers for his local Cub Scout Pack, goes camping, and studies history and linguistics. Guy lives in Ohio with his wife, his three teenage sons, and an entire wall of games."
  />
 
 <Speaker name="Dustin Hershman" Image={dustinImage} talk={{ title: "Building your First gRPC Service in Node.js", 
