Included Jyotsna workshop
Included Jyotsna workshop

--- a/src/pages/workshops.mdx
+++ b/src/pages/workshops.mdx
@@ -10,6 +10,7 @@ import scottsanImage from "../components/SpeakerImages/scottsan";
 import felesiaImage from "../components/SpeakerImages/felesia";
 import vueVixensImage from "../components/SpeakerImages/vuevixens";
 import shawnImage from "../components/SpeakerImages/shawn";
+import jyotsnaImage from "../components/SpeakerImages/jyotsna-gupta";
 import { Link as ButtonLink } from "../components/Button";
 import Text from "../components/Text";
 import { Hidden } from '../components/Hidden';
@@ -21,7 +22,7 @@ import { Hidden } from '../components/Hidden';
 ## Workshops 
 
 <Text my={10}>
-Will be conducted on Aug-01-2019 at Improving Office,One Easton Oval Suite. 175, Columbus, OH 43219 from 8 AM to 5 PM.
+Will be conducted on Aug-01-2019 at Improving Office,One Easton Oval Suite. 175, Columbus, OH 43219 from 8 AM to 8 PM.
 </Text>
 </Card>
 <Flex flexDirection="row" flexWrap="wrap" alignItems="center" justifyContent="center" style={{ padding: "2rem", width: "" }}>
@@ -86,6 +87,17 @@ bio="Owner at Black Mutt Media, LLC. Scott Sanzenbacher is a web and mobile appl
 registerlink="https://www.eventbrite.com/e/javascript-and-friends-conference-registration-60880128102"
 timing="1:00 PM to 5:00 PM"
 /> 
+
+<Workshop name="Jyotsna Gupta" Image={jyotsnaImage} talk={{ title: "Develop cross platform browser add-ons Workshop ", 
+description: "Browser Add-ons can extend and modify the functionality of a browser. They help us to personalize the browser as per our need. In this workshop we will develop add-ons for Firefox or Chrome add-on and port Firefox add-on to other browsers(Chrome, Opera, Edge,etc.) by having basic knowledge of JavaScript using WebExtensions API " }} 
+twitter="imJenal" 
+linkedin="in/jyotsna17gupta" 
+company="CoffeeBeans,  Mozilla Techspeaker" 
+bio="Jyotsna is an Open Source Enthusiast, working as a Software Developer in CoffeeBeans, Bangalore. She is a TechSpeaker at Mozilla and volunteers to Mozilla in her free time as an Add-on Content Reviewer & Add-ons Featured Advisory Board Member. She has served on the judging panel for the Firefox Quantum Extensions Challenge. She is also a Firefox Add-ons Mentor and has published a privacy-themed add-on PrivateX. For her contributions to Mozilla, her name is also listed in about:credits and the credits page of every shipped Firefox browser. She energizes herself by playing Badminton, TT, Carrom, Chess, and Basketball. She prefers to spend most of the time in her room, else she feels to travel the world. If you do not see her doing any of the above, then you will find probably find her sleeping and dreaming for hours, maybe day"
+registerlink="https://www.eventbrite.com/e/javascript-and-friends-conference-registration-60880128102"
+timing="5:30 PM to 8:00 PM"
+/> 
+
 
 <Workshop name="Vue Vixens" Image={vueVixensImage} talk={{ title: "Vue Vixens Full Day Free Workshop", 
 description: "Are you curious about VueJS? Do you identify as a woman? Join us, the day before JavaScript and Friends Conference 2019, for a full day workshop. You will learn when and how to use VueJS, and you will create a fun, working app of your own! We will provide lunch, and mentors to help you get up and running. Workshop will be mentored by Novella Chiechi and Diana Rodriguez. Workshop will be conducted at Leading EDJE." }} 
