--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -147,7 +147,7 @@ bio="Father of 6, Full stack dev and travel hacker I am a full-stack dev and fat
  />
 
 <Speaker name="'Tine Zekis" Image={christineImage} talk={{ title: "Curriculum to Command Line: Why Teachers Make Awesome Coders, and What Your Team Can Learn from Them", 
-description: "Perhaps you have heard the oft-quoted statistic that teachers make 1500 decisions per day in their classrooms. How do they do that? Dont you think a mind with that kind of training would be great at writing algorithms and defining edge cases? Well, it turns out that they are! Find out why former educators make awesome coders, communicators, teammates, and leaders. And, perhaps more importantly, learn what your teams can do to hone those same skills." }} 
+description: "Perhaps you have heard the oft-quoted statistic that teachers make 1500 decisions per day in their classrooms. How do they do that?! Don't you think a mind with that kind of training would be great at writing algorithms and defining edge cases? Well, it turns out that they are! Find out why former educators make awesome coders, communicators, teammates, and leaders. And, perhaps more importantly, learn what your teams can do to hone those same skills." }} 
 twitter="tinezekis" 
 linkedin="tinezekis" 
 company="Centro" 
