Updated Speakers and Sponsors
Updated Speakers and Sponsors

--- a/src/pages/speakers.mdx
+++ b/src/pages/speakers.mdx
@@ -6,7 +6,6 @@ import Speaker from "../components/Speaker";
 import bobFornalImage from "../components/SpeakerImages/bob-fornal";
 import burtonSmithImage from "../components/SpeakerImages/burton-smith";
 import alisonfalkImage from "../components/SpeakerImages/alison-falk";
-import billDingerImage from "../components/SpeakerImages/bill-dinger";
 import cassandraImage from "../components/SpeakerImages/cassandra-faris";
 import christineImage from "../components/SpeakerImages/christine";
 import danielImage from "../components/SpeakerImages/daniel";
@@ -34,6 +33,7 @@ import dianaimage from "../components/SpeakerImages/diana";
 import asiaImage from "../components/SpeakerImages/asia-r";
 import guyImage from "../components/SpeakerImages/guy";
 import ryanwealImage from "../components/SpeakerImages/ryanwe";
+import austinImage from "../components/SpeakerImages/austin-zell";
 import { Hidden } from '../components/Hidden';
 import Text from "../components/Text";
 import { Link as ButtonLink } from "../components/Button";
@@ -66,6 +66,14 @@ company="Trumble Inc"
 bio="Asia is a Director of Education at Trumble Inc, in this position Asia trains and educates engineers and production floor members about the internet of things and smart factories. Reveal, which is an intelligent software deployed as SaaS, which allows Asia to coordinate, lead, train, develop and create training material pertaining to data analytics. Asia has worked with brands such as Fiat Chrysler and Magna. In her role, she partnered with plant managers, manufacturing managers, and a diversity of team leaders to achieve collaboration and enthusiasm. Asia managed projects with the responsibility of helping oversee a range of critical projects from conception to delivery. She has assisted with improving KPI metrics, software enhancements and detecting data issues for upgrades. Asia has accomplishments as a Division 1 athlete. She was NCAA All-American at Eastern Michigan University. Later on, she went to complete her Master\'s in Business Administration and a Master\'s in Computer Information Systems, while coaching Division 1 Athletes. While studying for her MBA, she traveled to Nairobi Kenya to give a speech about Global Sustainability, amongst other Jesuit MBA professionals.Moreover, Asia is a large community organizer in Detroit Michigan, Asia offers her spare time to communities serving as a Board of Director under Judith Dianne Jackson Scholarship fund and a community cohort program known as, Contemplative Leaders in Action."
  /> 
 
+ <Speaker name="Austin Zellner" Image={austinImage} talk={{ title: "Getting Dangerous with MongoDB", 
+description: "With a simple to use database that provides the flexibility of JSON, combined with the ease of Database as a Service through their Atlas offering. But with so much capability, sometimes it can be a challenge to understand how to get started. In this talk, we'll cover just enough concepts to make you dangerous, while also showing the path of how to grow with mastery with this next generation data platform."}} 
+twitter="" 
+linkedin="austin-zellner-b0a8874" 
+company="MongoDB" 
+bio="Austin is a Principal Solution Architect for MongoDB in the Great Lakes region. Prior to evangelizing software, Austin worked as a developer in the insurance, printing, and retail domains, doing projects ranging for ERP, to Knowledge Networks for Estimation, to Mobile Point of Sale. When he is not thinking about data models, he spends his time collecting boardgames and miniatures, reading about history, and basically chasing whatever squirrel crosses his path."
+ /> 
+
 <Speaker name="Aydin Akcasu" Image={aydinImage} talk={{ title: "I Told You to Stand Still ! (Motion Detection Web App with JavaScript)", 
 description: "Web browsers are getting more and more powerful. Now you can easily access the camera, and analyze the images. Using only a browser, we will access the camera , using WebRTC (Web Real-Time Communications). We will capture still frames from the streaming video, and analyze the images and create a Motion Detection Web Application, using ONLY JavaScript.We will create an app that will detect if there is motion, the direction, and the magnitude.In this talk, Aydin Akcasu, (who has over 10 years of prior experience in computer vision), demonstrates how easy it is to create a Motion Detector app, using only JavaScript and just your web browser."}} 
 twitter="aakcasu" linkedin="aydin-akcasu-51063" company="Quicken Loans" 
@@ -88,14 +96,6 @@ Husband, father, and programmer. My focus is on front-end development - JavaScri
 <Speaker name="Burton Smith" Image={burtonSmithImage} talk={{ title: "Taming the Front-End - A Guide to Modern Web Development", 
 description: "Web development has become more and more complex. There are so many tools like preprocessors, bundlers, minifiers, transpilers, and task runners to help us build and optimize our code. How do we know where to start?\r\nIn this session, we will take a high-level overview of some of the tools used for web development and give developers a roadmap for understanding the modern web ecosystem." }} twitter="stuffbreaker" linkedin="burton-smith-48132a34" company="Bunzl North America" bio="I have been building software and applications for over 10 years and focus primarily on web and mobile software engineering. At my current company, I work with internal business stakeholders and external customer to build digital products and tools.
 In my free time, I love spending time with my wife and three daughters, practicing martial arts, jamming on my ukulele, and learning new things (usually about software engineering)."
- /> 
-
-<Speaker name="Bill Dinger" Image={billDingerImage} talk={{ title: "I Feel the Need for Web Page Speed", 
-description: "We demand high performance web applications. To build them we need every single piece of information to help us find actionable ways of speeding up our applications. In this session learn how to use the performance API together with common browser performance tooling to determine down to the method level how long our pages take to perform operations. We\u2019ll also touch briefly on instrumenting up popular frameworks such as React & Angular, running performance checks on mobile browsers, and free open source tools that can help you diagnose and monitor performance." }} 
-twitter="" 
-linkedin="" 
-company="VML" 
-bio="Bill is a Solutions Architect with VML working on delivering digital solutions to our clients. Over the last 15 years Bill has worked in enterprise IT starting in the trenches on the help desk. After that, Bill spent almost a decade working in infrastructure support focusing in the Microsoft stack. Over the last 5 years Bill has been developing, architecting and leading teams of software developers with VML. During that time Bill has done everything from troubleshoot dial up connections in rural Nebraska to building the digital experiences for some of Americas most well known brands.When not working, Bill will probably be found on his bike exploring gravel roads in his hometown of Lincoln, Nebraska."
  /> 
 
 <Speaker name="Cassandra Faris" Image={cassandraImage} talk={{ title: "Purposeful Personal Branding", 
