Performed changes to base website
Removed workshop and schedule pages and links. Included Thank you page.

--- a/src/pages/callforsponsors.mdx
+++ b/src/pages/callforsponsors.mdx
@@ -21,7 +21,7 @@ First Annual JavaScript and Friends Conference a success. And with your contribu
 Our team has created opportunities for sponsorship at a number of levels to make it easier for you to support our team of volunteers
 in bringing this about.
 
-<a href="https://1drv.ms/b/s!AqhcZadKop7eiy-K__Qs6ZmkqFVg" target="_blank" rel="noopener noreferrer">View our Sponsorship Opportunities</a>
+Stay tuned for 2020 sponsorship opportunities.
 
 ### Where is my money going?
 
