--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -7,16 +7,7 @@ import Text from "../components/Text";
 
 ## Community Events
 
-Click on the links to RSVP for our July Events
-
-<Text my={20}>07.09.2019 <a href="https://www.eventbrite.com/e/intro-to-rxjs-and-firebase-tickets-64553341783" target="_blank" rel="noopener noreferrer">Intro to RxJs and Firebase</a></Text>
-
-<Text my={20}>07.18.2019 <a href="https://www.eventbrite.com/e/intro-to-angular-8-and-features-tickets-65178688211" target="_blank" rel="noopener noreferrer">Explore Features of Angular8</a></Text>
-
-<Text my={20}>07.24.2019 <a href="https://www.meetup.com/Vue-Columbus/events/jgbfwqyzkbgc/" target="_blank" rel="noopener noreferrer">Vue - Wired for success</a></Text>
-
-<Text my={20}>08.01.2019 <a href="https://vuevixens.org/events/javascript-friends-conference-2019" target="_blank" rel="noopener noreferrer">Vue Vixens Full Day Workshop</a></Text>
-
+September Events to be Updated
 
 Interested in speaking at our community events reach out to us 
 at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>
