Fixed image name casing
Fixed image name casing

--- a/src/pages/blog/thankyou.mdx
+++ b/src/pages/blog/thankyou.mdx
@@ -1,7 +1,7 @@
 import { Link } from "gatsby";
 import Layout from "../../components/layout";
 import Card from "../../components/Card";
-import sponsorImage from "./sponsors.png";
+import sponsorImage from "./sponsor.png";
 
 <Card mx="10%" my="48px">
 
