--- a/src/pages/blog/thankyou.mdx
+++ b/src/pages/blog/thankyou.mdx
@@ -3,7 +3,7 @@ import Layout from "../../components/layout";
 import Card from "../../components/Card";
 import sponsorImage from "./sponsor.png";
 
-<Card mx="10%" my="48px">
+<Card>
 
 We did it! Time and the odds were against us, but we managed to pull it off. We threw a JavaScript themed conference, and people showed up. Not only that, but by most peoples’ estimations, it was a successful conference at that. Though some of us have volunteered at or spoken at various conferences, not one of the board members has ever been part of organizing or running a conference before. We came together and created a brand new developer conference. And we did it in just 7 short months.
 
