Community Events updated
Community Events Updated

--- a/src/pages/communityevents.mdx
+++ b/src/pages/communityevents.mdx
@@ -7,7 +7,13 @@ import Text from "../components/Text";
 
 ## Community Events
 
-September Events to be Updated
+RSVP now for September Events
+
+<Text my={20}>09.19.2019 <a href="https://www.eventbrite.com/e/what-is-the-new-swag-with-ngrx-tickets-70824998477" target="_blank" rel="noopener noreferrer">Intro to Ngrx and State Management in Angular Apps</a></Text>
+
+<Text my={20}>09.25.2019 Vue Js Columbus Meetup to be updated</Text>
+
+<Text my={20}>09.30.2019 React Online Meetup to be updated</Text>
 
 Interested in speaking at our community events reach out to us 
 at <a href="mailto:info@javascriptandfriends.com">info@javascriptandfriends.com</a>
